Major Growatt API change