@@ -8,7 +8,8 @@ import javax.script.ScriptEngine;
 import javax.script.ScriptEngineManager;
 import javax.script.ScriptException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 @Slf4j
 public final class MD5 {
@@ -18,11 +19,11 @@ public final class MD5 {
 		try {
 			ScriptEngine engine = new ScriptEngineManager().getEngineByName("nashorn");
 			
-			engine.eval(new URLReader(new URL("https://server.growatt.com/javaScript/xhb/js/MD5.js?1.7.5")));
+			engine.eval(new URLReader(new URI("https://server.growatt.com/javaScript/xhb/js/MD5.js?1.8.6").toURL()));
 
 			Invocable inv = (Invocable) engine;
 			return (String) inv.invokeFunction("MD5", password);
-		} catch (NoSuchMethodException | ScriptException | MalformedURLException e) {
+		} catch (NoSuchMethodException | ScriptException | MalformedURLException | URISyntaxException e) {
 			log.error(e.getMessage(), e);
 		}
 		
